working on relevant points

--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -16,6 +16,7 @@ del usuario.
 --mision: atraer usuarios, crear un valor agregado, satisfaccion del usuario
 --crear una relacion con el producto
 --diferenciacion del producto 
+--diseno simple y minimalista
 \begin{itemize}
 
 \item usuario no sabe que tiene la necesidad
