--- a/contents/relevant/model.tex
+++ b/contents/relevant/model.tex
@@ -2,20 +2,20 @@
 Para realizar una buena seleccion de los datos que son relevantes o la combinacion de estos, es imprescindible unos 
 conocimientos solidos sobre la materia a tratar. Por ello, es fundamental dedicarle el tiempo necesario para enter la
 importancia de los datos, que beneficios nos puede aportar o que datos nos perjudican.
+Los puntos que deben quedar claro en la fase de diseno son:\\
 
-Los puntos que deben quedar claro en la fase de diseno son:
-
-\begin{itemize}
-    \item \textbf{Objetivo}. Conceptualmente, que problema queremos solventar o clarificar. Es muy importante que tengamos un objetivo claro,
+ \textbf{Objetivo}. Conceptualmente, que problema queremos solventar o clarificar. Es muy importante que tengamos un objetivo claro,
     incluso si no se cuentan con conocimientos previos de la materia, tener un objetivo bien definido nos ayuda a encontrar la solucion o 
-    describirla con mas claridad al experto.
-    \item \textbf{Puntos importantes. Valores destacables}. Como mencionamos anteriormente, nuestro objetivo no es mostrar todos los datos, sino
+    describirla con mas claridad al experto.\\
+
+ \textbf{Puntos importantes. Valores destacables}. Como mencionamos anteriormente, nuestro objetivo no es mostrar todos los datos, sino
     que se trata de proporcionarle los datos importantes al usuario para poder descubrir los valores significativos, los que tienen influencia en
     nosotros, ya sea positivo o negativo. A nivel mas tecnico, serian los limites o que valores de que datos son los que nos proporcinan una informacion
-    de una situacion excepcional, o los valores que estamos intentando identificar mas facilmente.
-    \item \textbf{Data workflow}. Diseno del flujo de informacion, que quede claro como se llega de un punto a otros, por ejemplo de una representacion
+    de una situacion excepcional, o los valores que estamos intentando identificar mas facilmente.\\
+
+ \textbf{Data workflow}. Diseno del flujo de informacion, que quede claro como se llega de un punto a otros, por ejemplo de una representacion
     simple a mas detallada o compleja. Si el usuario entiende los conceptos basicos, le sera mas facil de entender el concepto mas desarrollado.
-\end{itemize}
+
 
 Respecto al conjunto de datos, una vez marcada una meta, deberemos estipular cuales son los campos necesarios del conjunto de datos que necesitamos para representar la informacion
 disenada. Es momento de realizar un analisis de los datos proporcionados y ver en la lista de los campos que nos ofrece la fuente, si serian
