--- a/contents/relevant/personalized.tex
+++ b/contents/relevant/personalized.tex
@@ -1,5 +1,5 @@
-\subsection{Title}
-\begin{comment}
+\subsection{Personalizacion}
+ 
     --relevante de manera general vs relevante personal
     --casos personales
     --aplicabilidad
@@ -13,7 +13,7 @@
      \item conocimientos multidisciplinares
         \item fuentes fiables, actualizacion periodica
     \end{itemize}
-    \end{comment}
+  
 
 \subsubsection{How to solve it} 
 
