--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -1,10 +1,17 @@
 \subsection{Enfoque al usuario}
---Descubrir las necesidades, deseos y demandas.
---Identificar las necesidades homogeneas del usuario medio o estrategias diferenciada (Enfocado a un segmento)
-Estudio de las necesidades de los usuarios, psicologico, social y economico.
-Actual
-Retroalimentacion, analisis del comportamiento del usuario para ve sus pautas
---diseno simple y minimalista
+Una gran parte del objetivo marcado en el apartado 3.1 Diseno, viene definido por el servicio que queramos ofrecerle
+al usuario, ya que este, es nuestro cliente final y al que pretendermos ayudar.
+Tendremos que definir las necesidades que muestran los usuarios en combinacion con las carencias del mercado.
+Para ello tendremos que decidir si nuestro objetivo esta dirigido a un publico de gran dimension, por lo que tendremos que
+que identificar las necesidades homogeneas del usuario medio o si el objetivo esta enfocado a un tipo de usuario
+especifico, con necesidades caracteristicas.
+
+Por lo tanto necesitamos un estudio actual sobre el nivel psicologico, social y economico del grupo objetivo, para descubrir, no solo
+las necesidades, pero tambien los deseos, que le gustaria tener y sus demandas, que quieren.
+
+Una vez los usuarios tengan acceso a los datos tal y como se los proporcionamos, es importante tener una retroalimentacion, 
+seria ideal poder realizar un analisis del comportamiento del usuario para ve sus pautas respecto a los datos obtenidos.
+
 \subsubsection{How to solve it} 
 
 
