working on relevant

--- a/contents/relevant/model.tex
+++ b/contents/relevant/model.tex
@@ -41,13 +41,13 @@ Buscamos las relaciones que tienen los contaminantes con distintas enfermedades,
 sobre sus sintomas y como se pueden ver agravados por cada contaminante.
 Para cada contaminante, buscamos las fuentes de polucion y vemos si se aplican a la ciudad de Malaga y como.
 Con toda esta informacion definimos que los contaminantes que afectan a la calidad del aire son el CO, NO2, O3 y PM (Particulated Material), diferentes medidas de particulas
-afectan de distinto modo a distintas enfermedades.
+afectan de distinto modo a distintas enfermedades.\\
 
-Como el objetivo principal es la concienciacion, aportaremos todos estos datos de una manera organizada en el glosario de Aire Guru.
+Como el objetivo principal es la concienciacion, aportaremos todos estos datos de una manera organizada en el glosario de Aire Guru.\\
 
 Una vez seleccionados estos contaminantes, verificamos si contamos con estos datos en nuestro conjunto de datos. Como mencionamos anteriormente algunas muestras
 muestran medidas cualitativas y otras no cuentan con las medidas. En este caso se deciden los siguientes valores Bueno:50, Aceptable:150,Pobre:300, Malo:400, Insalubre:500
-y se le indicara al usuario cuando el valor es cualitativo.
+y se le indicara al usuario cuando el valor es cualitativo.\\
 
 
 En este punto que sabemos como afecta la polucion del aire en nuestra salud, vamos a dejar claro en nuestras representaciones cuales son los valores indeseables,
