--- a/contents/relevant/personalized.tex
+++ b/contents/relevant/personalized.tex
@@ -1,24 +1,24 @@
 \subsection{Personalizacion}
+Cada usuario es unico al igual que su situacion personal, por eso tendremos que buscar la manera de que los datos se 
+adapten a los usuarios. Ofrecerle una informacion no solo relevante a nivel general pero a nivel particular.
+Para ello deberemos plantearnos que necesitariamos que nos dijeran los datos en mi caso, por el lugar en el que vivo, por
+mi salud, situacion familiar, algo que nos caracterize.
  
     --relevante de manera general vs relevante personal
     --casos personales
     --aplicabilidad
     --solventar problema en particular
+    --unicidad solo es para un usuario.
     
-    
-    
-    \begin{itemize}
-    
-          \item Herramientas necesarias para que el usuario entienda la informacion y de porque
-     \item conocimientos multidisciplinares
-        \item fuentes fiables, actualizacion periodica
-    \end{itemize}
+
   
 
 \subsubsection{How to solve it} 
 
 
 \subsubsection{How we solve it. Aire Guru} 
+Filtros por condicion medica
+Historial
  
 \elsparagraph{Evaluation}  
 \begin{itemize}
