--- a/contents/relevant/useful.tex
+++ b/contents/relevant/useful.tex
@@ -1,21 +1,30 @@
 \subsection{Util}
- 
+--Que es informcion no util
+--No perdernos en definiciones o explicaciones que no son nuestra especialidad.
+-No porque este en el conjunto de datos significa que hay que ponerlo.
 Como mencionamos anteriormente, huiremos de toda aquella informacion vana, que no haga ninguna aportacion
-al objetivo marcado. No queremos que el usuario se distraga o pierda en medio de una piscina de datos completa
-pero compleja que para el no tenga ningun sentido.\\
+al objetivo marcado. No queremos que el usuario se distraga o se pierda en medio de una piscina de datos completa
+pero compleja que para el no tenga ningun sentido.
 
-Los datos deben contarnos por si, que significan.
+Toda representacion tienen que contarnos lo que significa sin tener que estar accediendo continuamente a informacion
+extra.
 En caso complejos, los conceptos que no sean de uso diario para los usuario, podremos poner informacion
 complementaria a su disposicion para que el usuario pueda informarse sobre el significado de los datos 
 representados, esta practica proporcionara al usuario un mayor dominio del concepto y podra estar mas
 seguro de su lectura de los datos.
 Por otro lado, cuando dirigimos al usuario a fuentes oficiales de informacion, donde puedan obtener una explicacion veridica,
 reenforzamos la credibilidad de las representaciones que estamos realizando.
+--huir de decoraciones
+
 \subsubsection{How to solve it} 
 
 
 \subsubsection{How we solve it. Aire Guru} 
- 
+ Nos centramos en 6 contaminantes y la medida es unica para todos y el general, el AQI, los rangos son exactamente
+ los mismos para todos
+ No existen datos que el usuario no entienda, como coordenadas, identificador de la estacion, como se ha tomado la medida.
+ Si la medida no existe, simplemente la obviaremos.
+
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
